--- a/src/Components/Cards/CategoriesCard/CategoriesCard.css
+++ b/src/Components/Cards/CategoriesCard/CategoriesCard.css
@@ -110,13 +110,19 @@
   --yt-spec-selected-nav-text: #fff;
 }
 
-body {
-  background-color: var(--yt-spec-general-background-c);
-  color: var(--secondary-color);
-  font-family: Roboto, Arial, sans-serif;
+.category-card {
+  width: 300px;
+  margin: 20px 20px 20px 0;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
+.category-thumbnail {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.category-name {
+  color: var(--yt-spec-brand-icon-active);
+  font-size: 18px;
 }
